[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Game.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/InfoPanelUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bomb/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/ResultPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/WorldMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Bomb/Bomb.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/Data/ui_theme.tres" type="Theme" id=8]
[ext_resource path="res://World/Assets/Background-music.ogg" type="AudioStream" id=9]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.00651042, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.290365, 0.98718 ), -1.20075, -1.20075, 0, 0, Vector2( 0.955729, 0.346154 ), 0.0, 0.0, 0, 0 ]

[node name="Game" type="Navigation2D"]
z_index = 1
script = ExtResource( 1 )
bombScene = ExtResource( 7 )
explosionScene = ExtResource( 4 )
enemyScene = ExtResource( 2 )

[node name="WorldMap" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 65536, 0, 0, 65537, 2, 0, 65538, 2, 0, 65539, 0, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 0, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 0, 0, 65565, 2, 0, 65566, 2, 0, 65567, 0, 0, 131072, 0, 0, 131073, 2, 0, 131074, 1, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 1, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 1, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 0, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 1, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 1, 0, 131098, 2, 0, 131099, 2, 0, 131100, 2, 0, 131101, 1, 0, 131102, 2, 0, 131103, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 1, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 1, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 0, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 1, 0, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 196633, 1, 0, 196634, 2, 0, 196635, 2, 0, 196636, 2, 0, 196637, 2, 0, 196638, 0, 0, 196639, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 2, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 2, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 2, 0, 262159, 0, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 2, 0, 262164, 1, 0, 262165, 2, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 2, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 0, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 1, 0, 327706, 2, 0, 327707, 2, 0, 327708, 2, 0, 327709, 2, 0, 327710, 1, 0, 327711, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 1, 0, 393224, 2, 0, 393225, 1, 0, 393226, 2, 0, 393227, 2, 0, 393228, 1, 0, 393229, 1, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 1, 0, 393235, 1, 0, 393236, 2, 0, 393237, 2, 0, 393238, 1, 0, 393239, 2, 0, 393240, 2, 0, 393241, 1, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 1, 0, 393247, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 2, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 2, 0, 458763, 2, 0, 458764, 0, 0, 458765, 1, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 0, 0, 458771, 1, 0, 458772, 1, 0, 458773, 2, 0, 458774, 1, 0, 458775, 2, 0, 458776, 2, 0, 458777, 1, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 458782, 1, 0, 458783, 0, 0, 524288, 0, 0, 524289, 1, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 1, 0, 524296, 2, 0, 524297, 1, 0, 524298, 2, 0, 524299, 2, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 1, 0, 524308, 1, 0, 524309, 2, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 2, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 0, 0, 589824, 0, 0, 589825, 1, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 1, 0, 589832, 2, 0, 589833, 1, 0, 589834, 2, 0, 589835, 2, 0, 589836, 0, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 0, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 1, 0, 589850, 2, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 589854, 1, 0, 589855, 0, 0, 655360, 0, 0, 655361, 1, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 1, 0, 655368, 2, 0, 655369, 1, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 1, 0, 655386, 2, 0, 655387, 2, 0, 655388, 2, 0, 655389, 2, 0, 655390, 1, 0, 655391, 0, 0, 720896, 0, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 2, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 2, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 0, 0, 720912, 1, 0, 720913, 1, 0, 720914, 2, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 2, 0, 720920, 1, 0, 720921, 1, 0, 720922, 2, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 1, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 1, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 0, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 1, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 1, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 0, 0, 786463, 0, 0, 851968, 0, 0, 851969, 2, 0, 851970, 1, 0, 851971, 2, 0, 851972, 2, 0, 851973, 1, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 1, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 0, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 1, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 1, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 1, 0, 851998, 2, 0, 851999, 0, 0, 917504, 0, 0, 917505, 2, 0, 917506, 2, 0, 917507, 0, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 0, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 0, 0, 917533, 2, 0, 917534, 2, 0, 917535, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0 )

[node name="BombContainer" type="Node2D" parent="."]

[node name="SpawnFrequencyTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Enemies" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="Position1" type="Position2D" parent="Players"]
position = Vector2( 96, 96 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="Position2" type="Position2D" parent="Players"]
position = Vector2( 1952, 96 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="Position3" type="Position2D" parent="Players"]
position = Vector2( 96, 928 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="Position4" type="Position2D" parent="Players"]
position = Vector2( 1952, 928 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultPopup" parent="CanvasLayer/HUD" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 2048.0
margin_bottom = 1196.0
size_flags_vertical = 3

[node name="InfoPanelUI" parent="CanvasLayer/HUD" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1200.0
margin_right = 2048.0
margin_bottom = 1200.0

[node name="WaitingDialog" type="AcceptDialog" parent="CanvasLayer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -53.0
margin_right = 218.0
margin_bottom = 53.0
theme = ExtResource( 8 )
popup_exclusive = true
window_title = "Waiting..."
dialog_text = "Waiting for other players..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 992, 698 )
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.3
flag_align_y = true
direction = Vector2( 0, -1 )
spread = 60.0
gravity = Vector2( 0, 500 )
initial_velocity = 1000.0
initial_velocity_random = 0.4
damping = 100.0
scale_amount = 40.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )
hue_variation = 1.0
hue_variation_random = 1.0
[connection signal="timeout" from="SpawnFrequencyTimer" to="." method="_on_SpawnFrequencyTimer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
